- fixes by Bleekk
- replaced intval() with (int) (mamba)
- enforcing strict comparison (mamba)
- check for existence of Categories and Forums (cesag/mamba)
- some PSR-2 code clean-up (mamba)
- bug fix: $cat_image in /index.php (mamba)
- bug fix: RSS (mamba)
- bug fix: in deleting posts (slider84/mamba)
- added conversion of "poster_ip" field to IPv6 format: varchar(45) (trabis/mamba)

4.33         11/20/2012 (changes by Irmtfan)
===========================================
- fixed .htaccess (Trabis)
- Changing TYPE to ENGINE (mamba)
- bug fix: Prune function (mamba)
- New topic list block using NewbbTopicRenderer class, fix topic type and prune system
- bug fix: undefined forumCookie in footer
- bug fix: dont show topic title in list.topic.php
- enhance the advance block add more sorts lastposttime, lastposter, lastpostmsgicon . add more display mode: attachment, read, pagenav
- bug fix: read topics do not show for readmode = 1
- improve: add multi topic poster and multi last poster
- fix: multi status and multi display header in NewbbTopicRenderer class
- delete user.php from italian language
- improve: add anon users to topic poster and last poster in NewbbTopicRenderer class (used in block and list.topic.php)
- newbb/class/topic.renderer.php, newbb/xoops_version.php,
- newbb/list.topic.php, newbb/blocks/list_topic.php
- bug fix: should not ban the user in forum who is moderator of that forum. in newbb/include/form.post.php and newbb/class/moderate.php
- bug fix: uid=0 for anonymous users in newbb/class/moderate.php
- bug fix: if forum=0 should return true in any forum in newbb/class/moderate.php
- bug fix: should not show quick reply for suspend users otherwise they can post in newbb/viewtopic.php
- add: forum select box for admins to be able to suspend users in any forum or all forums in newbb/moderate.php
- bug fix: only show all bans for module admin - for moderator just show its forum_id bans in newbb/moderate.php