@@ -18,6 +18,7 @@
 - bug fix: RSS (mamba)
 - bug fix: in deleting posts (slider84/mamba)
 - added conversion of "poster_ip" field to IPv6 format: varchar(45) (trabis/mamba)
+- fix notices in Search (slider84/mamba)
 
 4.33         11/20/2012 (changes by Irmtfan)
 ===========================================
